减少部分窗口代码冗余